tidies default styles + header work

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,4 +1,6 @@
-@import "~bootstrap/scss/bootstrap.scss";
 @import "./style_desktop.scss";
 @import "./style_mobile.scss";
 
+html, body {
+    background: #02052c !important;
+}
