--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,9 @@
-.test {
-    border: 5px dashed blue;
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    background-color: transparent;
+    width: 100%;
+    height: 100px;
+    color: white;
 }
