Tidies up homepage

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
+    position: absolute;
     align-items: baseline;
     background-color: transparent;
     width: 100%;
