--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -9,5 +9,11 @@
 
 .item {
     color: white;
-    margin-right: 4px;
+    margin-right: 16px;
+}
+
+.link {
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
 }
