--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,5 @@
-@import "./style_desktop.scss";
-@import "./style_mobile.scss";
-
 html, body {
-    background: #02052c !important;
+  background: #02052c !important;
+  margin: 0;
+  padding: 0;
 }
