Adds a max page width and rearranges layout

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,9 @@
+@import '../../../src/assets/styles/variables';
+
 .footer {
   display: flex;
+  max-width: $pageWidthMax;
+  margin: auto;
 }
 
 .copyright {
