--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,11 +1,21 @@
+@import '../../../src/assets/styles/variables';
+
 .hero {
   display: block;
+  position: relative;
+  top: -100px;
   background: linear-gradient(black, #1d30c1a3, black);
   padding: 200px 0;
+  z-index: 1;
 
   .title {
     color: white;
   }
+}
+
+.content {
+  max-width: $pageWidthMax;
+  margin: auto;
 }
 
 .developer {
