--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/typography';
+
 .menu {
     display: flex;
 }
@@ -16,4 +18,10 @@
   color: white;
   font-size: 20px;
   text-decoration: none;
+  font-family: $bodyFont;
+
+  &:hover {
+      color: darken(white, 30%);
+      text-decoration: underline;
+  }
 }
