--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,19 +1,38 @@
 @import '../../../src/assets/styles/variables';
+@import '../../../src/assets/styles/typography';
 
 .hero {
   display: block;
   position: relative;
   top: -100px;
   background: linear-gradient(black, #1d30c1a3, black);
+  background-image: url(../../assets/images/1080226.jpg);
+  background-size: cover;
   padding: 200px 0;
   z-index: 1;
 
+  .heroImage {
+    display: block;
+  }
+
   .title {
     color: white;
+    font-family: $heroFont2;
+    font-size: 80px;
+    font-weight: 400;
+    margin: 0;
+  }
+
+  .subTitle {
+    font-family: $bodyFont;
+    margin: 0;
+    font-size: 40px;
   }
 }
 
 .content {
+  display: flex;
+  align-items: center;
   max-width: $pageWidthMax;
   margin: auto;
 }
