--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -14,9 +14,10 @@
 
   .title {
     color: white;
-    font-family: $heroFont2;
-    font-size: 80px;
-    font-weight: 400;
+    font-family: $bodyFont;
+    letter-spacing: -4px;
+    font-size: 120px;
+    font-weight: 600;
     margin: 0;
   }
 
