--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,20 +2,35 @@
 @import '../../../src/assets/styles/typography.scss';
 
 .header {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  align-items: baseline;
-  background-color: transparent;
   width: 100%;
-  height: 100px;
-  color: white;
-  max-width: $pageWidthMax;
-  margin: auto;
-  z-index: 2;
+  background-color: #162127;
+  padding: 10px 0;
+  
+  .content {
+    max-width: $pageWidthMax;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: baseline;
+    width: 100%;
+    color: white;
+    margin: auto;
+    z-index: 2;
+  }
 }
 
 .logo {
   font-family: $bodyFont;
-  font-weight: 400;
+  font-weight: 600;
+  font-size: 30px;
+  margin: 0;
+  color: cornflowerblue;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:focus {
+    border: 1px solid lighten(cornflowerblue, 20%);
+  }
 }
