--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -23,7 +23,7 @@
   font-family: $bodyFont;
 
   &:hover {
-      color: cornflowerblue;
+      color: mediumvioletred;
       text-decoration: underline;
   }
 }
