--- a/src/components/Posts/Posts.module.scss
+++ b/src/components/Posts/Posts.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/typography';
+
 .posts {
     display: flex;
     justify-content: space-between;
@@ -14,6 +16,17 @@
     background-color: #4e5c68;
     width: calc(20% - 10px);
     color: white;
+    transition: all .2s;
+    text-decoration: none;
+
+    h3, p {
+        font-family: $bodyFont;
+    }
+
+    &:hover {
+        transform: scale(1.1);
+        border: 2px solid mediumvioletred;
+    }
 }
 
 .oldPosts {
