--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -5,7 +5,7 @@
   display: block;
   position: relative;
   top: -100px;
-  padding: 200px 0;
+  padding: 200px $base-spacing;
   z-index: 1;
 
   .heroImage {
@@ -14,17 +14,20 @@
 
   .title {
     color: white;
-    font-family: $bodyFont;
-    letter-spacing: -4px;
+    font-family: $heroFont;
+    letter-spacing: 1px;
     font-size: 90px;
-    font-weight: 600;
+    font-weight: 400;
+    line-height: 100px;
     margin: 0;
   }
 
   .subTitle {
+    color: white;
     font-family: $bodyFont;
     margin: 0;
     font-size: 40px;
+    letter-spacing: 5px;
   }
 }
 
