Adds new bg + footer styling

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,6 @@
 html, body {
-  background: #142d37;
+  background: rgb(1,0,97);
+  background: linear-gradient(0deg, rgb(24, 24, 66) 0%, rgb(42, 24, 71) 100%);
   margin: 0;
   padding: 0;
 }
