--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,8 @@
 html, body {
   background: rgb(1,0,97);
   background: linear-gradient(0deg, rgb(24, 24, 66) 0%, rgb(42, 24, 71) 100%);
+  background-size: cover;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
