Adds MUI + Card Component

--- a/src/components/Posts/Posts.module.scss
+++ b/src/components/Posts/Posts.module.scss
@@ -13,7 +13,7 @@
     border: 1px solid transparent;
     border-radius: 8px;
     padding: 10px;
-    background-color: #4e5c68;
+    // background-color: #4e5c68;
     width: calc(20% - 10px);
     color: white;
     transition: all .2s;
