--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,8 +2,7 @@
 @import '../../../src/assets/styles/typography';
 
 .footer {
-  position: fixed;
-  bottom: 0;
+  display: block;
   width: 100%;
   background-color: #162127;
   margin-top: 40px;
