Aligns blog closer to new designs stylewise

--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -3,13 +3,13 @@
 
 .menu {
     display: flex;
-    margin-right: $base-spacing;
 }
 
 .list {
     display: flex;
     list-style-type: none;
     margin: 0;
+    padding: 0;
 }
 
 .item {
