--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -2,9 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 $heroFont: 'Permanent Marker', cursive;
 $heroFont2: 'Titan One', cursive;
 // $bodyFont: 'Montserrat', sans-serif;
 $inconsolata: 'Inconsolata', monospace;
-$bodyFont: $inconsolata;
+$robotoFont: 'Roboto', sans-serif;;
+$bodyFont: $robotoFont;
