--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,20 +3,22 @@
 
 .header {
   width: 100%;
-  background-color: #162127;
-  padding: 10px 0;
+  padding: 3rem 0 0 0;
   
   .content {
     max-width: $pageWidthMax;
-    display: flex;
     position: relative;
-    justify-content: space-between;
-    align-items: baseline;
     width: 100%;
     color: white;
     margin: auto;
     z-index: 2;
-    padding: 0 $base-spacing;
+    padding: 0;
+
+    @media screen and (min-width: 500px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
   }
 }
 
@@ -25,13 +27,7 @@
   font-weight: 600;
   font-size: 35px;
   margin: 0;
-  background: #404460;
   color: white;
-  padding: 5px;
-  border-bottom: 4px solid #fa00e4;
-  letter-spacing: 20px;
-  text-align: start;
-  width: 130px;
 
   &:hover {
     cursor: pointer;
