--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -5,7 +5,7 @@
   display: block;
   position: relative;
   top: -100px;
-  padding: 200px $base-spacing;
+  padding: 200px 0 80px 0;
   z-index: 1;
 
   .heroImage {
@@ -14,11 +14,10 @@
 
   .title {
     color: white;
-    font-family: $heroFont;
+    font-family: $bodyFont;
     letter-spacing: 1px;
-    font-size: 90px;
+    font-size: 40px;
     font-weight: 400;
-    line-height: 100px;
     margin: 0;
   }
 
@@ -33,7 +32,7 @@
 
 .content {
   display: flex;
-  align-items: center;
+  justify-content: flex-start;
   max-width: $pageWidthMax;
   margin: auto;
 }
@@ -48,4 +47,37 @@
 
 .blogger {
   text-decoration: underline;
+}
+
+// HERO TAGS
+.heroTags {
+  @media screen and (min-width: 500px) {
+    display: flex;
+  }
+}
+
+.tag {
+  padding: 8px 16px;
+  border-radius: 4px;
+  color: white;
+  font-family: $bodyFont;
+  margin-right: 8px;
+  margin-top: 32px;
+  font-size: 24px;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+}
+
+.uidev {
+  background-color: #9C4ED9;
+}
+
+.a11yeng {
+  background-color: #406BAB;
+}
+
+.youtuber {
+  background-color: #CB2B65;
 }
