Tidies up pages + colour scheme

--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -18,9 +18,9 @@
 }
 
 .link {
-  color: white;
-  font-size: 24px;
-  font-weight: 500;
+  color: rgb(187, 184, 184);
+  font-size: 20px;
+  font-weight: 400;
   text-decoration: none;
   font-family: $bodyFont;
 
