--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,8 +24,9 @@
 
 .logo {
   font-family: $bodyFont;
-  font-weight: 600;
-  font-size: 35px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  font-size: 30px;
   margin: 0;
   color: white;
 
