--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -64,6 +64,7 @@
   margin-right: 8px;
   margin-top: 32px;
   font-size: 24px;
+  border: 1px solid transparent;
 
   &:last-of-type {
     margin-right: 0;
