--- a/src/components/Posts/Posts.module.scss
+++ b/src/components/Posts/Posts.module.scss
@@ -13,13 +13,12 @@
     display: block;
     border: 1px solid transparent;
     border-radius: 8px;
-    padding: 10px;
+    padding: 20px 0 40px 0;
     width: 200px;
     width: 18rem;
     color: white;
     transition: all .2s;
     text-decoration: none;
-    margin-bottom: 24px;
 
     h3, p {
         font-family: $bodyFont;
