--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,3 +1,14 @@
+@import '../../assets/styles/typography';
+@import '../../assets/styles/variables';
+
 .about {
     color: white;
+}
+
+.title {
+    font-family: $bodyFont;
+}
+
+.text {
+    font-family: $bodyFont;
 }
