--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -3,10 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap');
 
 $heroFont: 'Permanent Marker', cursive;
 $heroFont2: 'Titan One', cursive;
 // $bodyFont: 'Montserrat', sans-serif;
 $inconsolata: 'Inconsolata', monospace;
-$robotoFont: 'Roboto', sans-serif;;
-$bodyFont: $robotoFont;
+$robotoFont: 'Roboto', sans-serif;
+$loraFont: 'Lora', serif;;
+$bodyFont: $loraFont;
