--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,5 +1,5 @@
-@import '../../../src/assets/styles/variables';
-@import '../../../src/assets/styles/typography';
+@import '../../../src/assets/styles/variables.scss';
+@import '../../../src/assets/styles/typography.scss';
 
 .hero {
   display: block;
